--- a/.env
+++ b/.env
@@ -25,7 +25,8 @@ APP_SECRET=ce97d7226d929f850dff35b39077d9b6
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://payment_user:password@localhost:3306/payment_db"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
