--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,17 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
+    # Register the Admin class for Callback entity
+    admin.callback:
+        class: App\Admin\CallbackAdmin
+        tags:
+            - { name: sonata.admin, model_class: App\Entity\Callback, manager_type: orm, label: Callback }
+
+    # Register the Admin class for Invoice entity (assuming you have one)
+    admin.invoice:
+        class: App\Admin\InvoiceAdmin
+        tags:
+            - { name: sonata.admin, model_class: App\Entity\Invoice, manager_type: orm, label: Invoice }
+
+    # Add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
